# clamui

./: .gitignore  CLAUDE.md  DEBIAN_PACKAGING.md  FLATPAK_SUBMISSION.md  QA_FIX_SUMMARY.md  README.md  SECURITY.md  SECURITY.txt  com.github.clamui.desktop  com.github.clamui.nemo_action  com.github.clamui.yml  com.github.rooki.ClamUI.desktop  com.github.rooki.ClamUI.metainfo.xml  com.github.rooki.ClamUI.yml  com.github.rooki.clamui.desktop  com.github.rooki.clamui.nemo_action  com.github.rooki.clamui.yml  implementation_plan.json  install.sh  io.github.Pdzly.ClamUI-virustotal.flatpak.nemo_action  io.github.Pdzly.ClamUI.desktop  io.github.Pdzly.ClamUI.flatpak.nemo_action  io.github.Pdzly.ClamUI.yml  io.github.linx_systems.ClamUI.local.yml  io.github.linx_systems.ClamUI.metainfo.xml  io.github.linx_systems.ClamUI.release.yml  io.github.linx_systems.ClamUI.yml  pyproject.toml  requirements.txt  uninstall.sh
.auto-claude/specs/003-add-freshclam-ui-component/: implementation_plan.json  qa_report.md
.auto-claude/specs/006-add-logs-viewing-functionality-for-previous-runs/: implementation_plan.json  qa_report.md
.github/workflows/: build-all.yml  build-deb.yml  build-flatpak.yml  lint.yml  test.yml
debian/: build-deb.sh
debian/DEBIAN/: control  postinst  postrm  prerm
docs/: CONFIGURATION.md  DEVELOPMENT.md  INSTALL.md  SCAN_BACKENDS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/architecture/: tray-subprocess.md
flathub/: io.github.linx_systems.ClamUI.yml  python3-build-deps.json  python3-runtime-deps.json
scripts/: install-nemo-actions.sh
src/: __init__.py  app.py  main.py
src/cli/: __init__.py  scheduled_scan.py
src/core/: CLAUDE.md  __init__.py  clamav_config.py  clamav_detection.py  daemon_scanner.py  flatpak.py  log_manager.py  path_validation.py  result_formatters.py  scanner.py  scanner_base.py  scanner_types.py  scheduler.py  settings_manager.py  statistics_calculator.py  threat_classifier.py  updater.py  utils.py
src/core/quarantine/: __init__.py  connection_pool.py  database.py  file_handler.py  manager.py
src/profiles/: __init__.py  profile_manager.py  profile_storage.py
src/ui/: CLAUDE.md  __init__.py  close_behavior_dialog.py  components_view.py  file_export.py  logs_view.py  pagination.py  preferences_dialog.py  preferences_window.py  profile_dialogs.py  quarantine_view.py  scan_results_dialog.py  scan_view.py  statistics_view.py  tray_icons.py  tray_indicator.py  tray_manager.py  tray_service.py  update_view.py  view_helpers.py  virustotal_setup_dialog.py  window.py
src/ui/preferences/: __init__.py  base.py  behavior_page.py  database_page.py  exclusions_page.py  onaccess_page.py  save_page.py  scanner_page.py  virustotal_page.py  window.py
tests/: __init__.py  conftest.py  test_app.py  test_appstream_metadata.py  test_cli.py  test_quarantine_integration.py  test_scan_view.py  test_scanner.py  test_updater.py
tests/cli/: __init__.py  test_scheduled_scan.py
tests/core/: MANUAL_VERIFICATION_5.1.md  __init__.py  test_battery_manager.py  test_clamav_config.py  test_clamav_detection.py  test_clipboard.py  test_connection_pool.py  test_daemon_scanner.py  test_file_handler.py  test_flatpak.py  test_keyring_manager.py  test_log_manager.py  test_path_validation.py  test_quarantine_database.py  test_quarantine_manager.py  test_result_formatters.py  test_scheduler.py  test_settings_manager.py  test_statistics_calculator.py  test_threat_classifier.py  test_updater.py  test_utils.py  test_virustotal.py
tests/e2e/: __init__.py  test_scheduled_scan_flow.py
tests/integration/: __init__.py  test_scanner_integration.py  test_scheduled_scan.py  test_tray_integration.py
tests/profiles/: __init__.py  test_models.py  test_profile_manager.py  test_profile_storage.py
tests/ui/: __init__.py  test_close_behavior_dialog.py  test_file_export.py  test_keyboard_shortcuts.py  test_logs_view.py  test_pagination.py  test_preferences_window.py  test_profile_dialogs.py  test_quarantine_view.py  test_scan_view.py  test_scanner_ui.py  test_statistics_view.py  test_tray_icons.py  test_tray_indicator.py  test_tray_manager.py
tests/ui/preferences/: test_base.py  test_behavior_page.py  test_database_page.py  test_exclusions_page.py  test_onaccess_page.py  test_save_page.py  test_scanner_page.py  test_scheduled_page.py  test_window.py
