[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clamui"
version = "0.1.0"
description = "A modern Linux desktop application that provides a graphical user interface for the ClamAV antivirus command-line tool."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ClamUI Contributors" }
]
keywords = ["clamav", "antivirus", "gtk4", "adwaita", "gui", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "PyGObject>=3.48.0",
    "pycairo>=1.25.0",
    "psutil>=5.9.0",
    "pygobject-stubs>=2.16.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
clamui = "src.main:main"
clamui-scheduled-scan = "src.cli.scheduled_scan:main"

[project.urls]
Homepage = "https://github.com/yourusername/clamui"
Repository = "https://github.com/yourusername/clamui"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else block
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may require external dependencies)",
    "ui: marks tests as UI tests (require GTK/display environment)",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# System dependencies note:
# ClamUI requires system packages for GTK4/PyGObject bindings:
#
# Ubuntu/Debian:
#   sudo apt install libgirepository-2.0-dev libcairo2-dev pkg-config python3-dev
#   (On Ubuntu < 24.04: use libgirepository1.0-dev instead)
#
# Runtime libraries:
#   sudo apt install gir1.2-gtk-4.0 gir1.2-adw-1 libadwaita-1-dev
#
# Fedora:
#   sudo dnf install python3-gobject-devel gtk4 libadwaita gobject-introspection-devel cairo-gobject-devel
#
# Arch:
#   sudo pacman -S python-gobject gtk4 libadwaita
